[package]
name = "verkle-tree"
version = "0.1.0"
authors = ["Izaak Meckler <ihmeckler@gmail.coom>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly-commit = { version = "0.3.0" }
ark-ff = { version = "^0.3.0" }
ark-ec = { version = "^0.3.0" }
ark-poly = { version = "^0.3.0" }
ark-bn254 = { version = "^0.3.0" }
rand = { version = "0.8.0", features = ["getrandom"] }
